# rust-web

./: .gitignore  LICENSE-MIT
client/: .env  package-lock.json  package.json  tsconfig.json
client/src/: main.ts
proto/: checklist.proto
server/: .env  Cargo.toml  build.rs
server/src/: main.rs
server/src/checklist/: mod.rs  model.rs  router.rs  service.rs
server/src/core/: database.rs  mod.rs
server/src/core/checklist/: model.rs  service.rs
server/src/core/common/: model.rs  service.rs
server/src/graphql/: checklist.rs
server/src/grpc/: checklist.rs
