[package]
name = "grpc-starter-server"
version = "1.0.0"
license = "MIT OR Apache-2.0"
author = "Lucas Vasilakopoulos <lucasyvas@gmail.com>"
edition = "2018"

[dependencies]
anyhow = "1.0.28"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
prost = "0.6.1"
tonic = "0.2.1"
tokio = { version = "0.2.20", features = ["macros"] }

[build-dependencies]
tonic-build = "0.2.0"
