[package]
name = "rust-web"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["Lucas Vasilakopoulos <lucasyvas@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
dataloader = "0.12.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = { version = "0.3.1", features = ["compat"] }
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "async-await", features = ["async"] }
log = "0.4.8"
prost = "0.6.1"
serde_json = "1.0.53"
sqlx = { version = "0.2.6", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }
tonic = "0.2.1"
tokio = { version = "0.2.21", features = ["macros"] }
uuid = { version = "0.8.1", features = ["v4"] }
warp = "0.2.3"

[build-dependencies]
tonic-build = "0.2.0"
